Add delete event participation
