# src/routes/event.js
@@ -44,6 +44,15 @@ router.delete('/:id', async function(req, res, next) {
 router.post('/:id/join', async function(req, res, next) {
     try {
         await event.join(req.params.id, req.body)
+        res.sendStatus(201)
+    } catch (err) {
+        next(err)
+    }
+})
+
+router.delete('/:idEvent/join/:idUser', async function(req, res, next) {
+    try {
+        await event.disjoin(req.params.idEvent, req.params.idUser)
         res.sendStatus(200)
     } catch (err) {
         next(err)
@@ -51,4 +60,4 @@ router.post('/:id/join', async function(req, res, next) {
 })
 
 
-module.exports = router;
+module.exports = router
